package seedu.healthbud.command.commandinterface;

public interface Command {
    void execute() throws Exception;
}

